@@ -7,7 +7,8 @@
 		"saverawunique": false,
 		"uniquedatefiles": true,
 		"uniquepath": "/../logs/unique/",
-		"onerror": ""
+		"onerror": "",
+		"alertonerror": false
 	},
     "radio":{
         "command": "rtl_fm -f 169.65M -M fm -s 22050 | multimon-ng -q -a FLEX -t raw /dev/stdin",
